chore: write OpenApi documentation for the current-user endpoint
