# app/App/Authentication/Http/Resources/UserResource.php
@@ -6,6 +6,7 @@ namespace App\Authentication\Http\Resources;
 
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes as OA;
 
 class UserResource extends JsonResource
 {
@@ -14,6 +15,44 @@ class UserResource extends JsonResource
      *
      * @return array<string, mixed>
      */
+    #[OA\Schema(
+        schema: 'UserResource',
+        properties: [
+            new OA\Property(
+                property: 'id',
+                description: 'The id of the user',
+                type: 'integer'
+            ),
+            new OA\Property(
+                property: 'first_name',
+                description: 'The first name of the user',
+                type: 'string'
+            ),
+            new OA\Property(
+                property: 'last_name',
+                description: 'The last name of the user',
+                type: 'string'
+            ),
+            new OA\Property(
+                property: 'email',
+                description: 'The email of the user',
+                type: 'string',
+            ),
+            new OA\Property(
+                property: 'created_at',
+                description: 'The date the user is created',
+                type: 'string',
+                format: 'date-time',
+            ),
+            new OA\Property(
+                property: 'updated_at',
+                description: 'The date the user is updated',
+                type: 'string',
+                format: 'date-time',
+            ),
+        ],
+        type: 'object',
+    )]
     public function toArray(Request $request): array
     {
         return [
